@@ -21,6 +21,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.pigeon_stargram.sns_clone.exception.ExceptionMessageConst.*;
 import static com.pigeon_stargram.sns_clone.service.reply.ReplyBuilder.*;
@@ -41,7 +42,7 @@ public class ReplyService {
                 .map(Reply::getId)
                 .sorted(Comparator.reverseOrder())
                 .map(this::getCombinedReply)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ResponseReplyDto getCombinedReply(Long replyId) {
